# modules/dxp/apps/ai-hub/ai-hub-rest-impl/src/main/java/com/liferay/ai/hub/rest/internal/resource/v1_0/AgentIssueReportResourceImpl.java
@@ -1,0 +1,49 @@
+/**
+ * SPDX-FileCopyrightText: (c) 2026 Liferay, Inc. https://liferay.com
+ * SPDX-License-Identifier: LGPL-2.1-or-later OR LicenseRef-Liferay-DXP-EULA-2.0.0-2023-06
+ */
+
+package com.liferay.ai.hub.rest.internal.resource.v1_0;
+
+import com.liferay.ai.hub.rest.dto.v1_0.AgentIssueReport;
+import com.liferay.ai.hub.rest.manager.v1_0.AgentIssueReportManager;
+import com.liferay.ai.hub.rest.resource.v1_0.AgentIssueReportResource;
+import com.liferay.portal.vulcan.dto.converter.DTOConverterRegistry;
+import com.liferay.portal.vulcan.dto.converter.DefaultDTOConverterContext;
+
+import org.osgi.service.component.annotations.Component;
+import org.osgi.service.component.annotations.Reference;
+import org.osgi.service.component.annotations.ServiceScope;
+
+/**
+ * @author Fábio Alves
+ */
+@Component(
+	properties = "OSGI-INF/liferay/rest/v1_0/agent-issue-report.properties",
+	scope = ServiceScope.PROTOTYPE, service = AgentIssueReportResource.class
+)
+public class AgentIssueReportResourceImpl
+	extends BaseAgentIssueReportResourceImpl {
+
+	@Override
+	public AgentIssueReport postAgentIssueReport(
+			AgentIssueReport agentIssueReport)
+		throws Exception {
+
+		return _agentIssueReportManager.postAgentIssueReport(
+			contextCompany,
+			new DefaultDTOConverterContext(
+				contextAcceptLanguage.isAcceptAllLanguages(), null,
+				_dtoConverterRegistry, contextHttpServletRequest, null,
+				contextAcceptLanguage.getPreferredLocale(), contextUriInfo,
+				contextUser),
+			agentIssueReport);
+	}
+
+	@Reference
+	private AgentIssueReportManager _agentIssueReportManager;
+
+	@Reference
+	private DTOConverterRegistry _dtoConverterRegistry;
+
+}
